fix message text overflowing

--- a/src/widget/Message.css
+++ b/src/widget/Message.css
@@ -1,6 +1,5 @@
 .message {
   display: block;
-  height: 32px;
   padding: 0px 10px;
   line-height: 35px;
   font-size: 0.875em;
